--- a/index.html
+++ b/index.html
@@ -3,61 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ASPA</title>
 </head>
 <style>
     .head{
-        background-color: green;
-        height: 40px;
-        color: wheat;
-        padding-left: 90px;
-        padding-top: 20px;
-        margin-bottom: 10px;
-
+        background-color: blue;
+        height: 200px;
     }
-    .main{
+    .green{
+        height: 70px;
+        width: 220px;
+        background-color: green;
+    }
+    .yellow{
+        background-color: yellow;
+        color: white;
+        height: 70px;
+        width: 200px;
+        margin-top: 20px;
+        padding: 10px;
+    }
+    .text{
         background-color: red;
         height: 300px;
         padding-top: 30px;
         padding-left: 30px;
-        
     }
-    .box{
-        height: 70px;
-        width: 220px;
+    .hope{
+        height: 50px;
+        width: 300px;
         background-color: blue;
     }
-    .text{
+    .blood{
         background-color: yellow;
         color: white;
-        height: 150px;
+        height: 70px;
         width: 200px;
         margin-top: 20px;
         padding: 10px;
-
     }
-    .footer{
-        background-color: red;
-        height: 40px;
-        margin-top: 10px;
+    .water{
+        background-color: black;
         color: white;
-        padding: 20px;
+        height: 70px;
+        width: 200px;
+        margin-top: 20px;
+        padding: 10px;
     }
 </style>
 <body>
     <div class="head">
-        <div>ASPA GROUP</div>
+        <div class="green"></div>
+        <div class="yellow"></div>
     </div>
-    <div class="main">
-        <div class="box">
-            <div class="box"></div>
-            <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, nesciunt modi corrupti eligendi non vero accusamus obcaecati in eius voluptatum incidunt, odio cumque ex deserunt odit adipisci doloribus ipsum nihil.
-            </div>
+    <div class="text">
+        <div class="hope">
+            ASPA GROUP
         </div>
-    </div>
-    <div class="footer">
-        <div>Design BY ALIKO</div>
+        <div class="blood"></div>
+        <div class="water">
+            ASPA GROUP education center. BU ev tapşırığında qeyd edilən konteyinləri düzgün yığmağı öyrənəcəyik
+        </div>
     </div>
 </body>
 </html>
